# python-chebai-graph

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
chebai-graph/: experiments.py
chebai-graph/preprocessing/: data.py  datasets.py
chebai_graph/loss/: pretraining.py
chebai_graph/models/: _gat.py  gin_net.py  graph.py
chebai_graph/preprocessing/: __init__.py  collate.py  properties.py  property_encoder.py  reader.py  structures.py  transform_unlabeled.py
chebai_graph/preprocessing/datasets/: base.py  chebi.py  pubchem.py
chebai_graph/preprocessing/fg_detection/: fg_aware_rule_based.py  fg_constants.py  rule_based.py
chebai_graph/preprocessing/properties/: __init__.py  augmented_properties.py  constants.py  properties.py
chebai_graph/preprocessing/reader/: __init__.py  augmented_reader.py  reader.py
chebai_graph/preprocessing/utils/: plot_augmented_graph.py  visualize_augmented_molecule.py
configs/data/: chebi50-graph.yml  chebi50_augmented_gnn.yml  chebi50_graph.yml  chebi50_graph_properties.yml  pubchem_graph.yml
configs/loss/: mask_pretraining.yml
configs/model/: gnn.yml  gnn_attention.yml  gnn_gine.yml  gnn_res_gated.yml  gnn_resgated_pretrain.yml
tests/unit/: test_data.py
tests/unit/readers/: testGraphPropertyReader.py
